name:                taolang
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/taolang#readme
license:             BSD3
license-file:        LICENSE
author:              Dai G
maintainer:          daig@mit.edu
copyright:           Dai G
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable taolang
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
